<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExternalActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="391dp"
        android:layout_height="608dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtExternal">

        <Button
            android:id="@+id/buttonBuatFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buat_file" />

        <Button
            android:id="@+id/buttonUbahFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubah_file" />

        <Button
            android:id="@+id/buttonBacaFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baca_file" />

        <Button
            android:id="@+id/buttonHapusFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hapus_file" />

        <TextView
            android:id="@+id/textBaca"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:gravity="center_horizontal"
            android:text="@string/hasil_baca"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtExternal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ini_external_storage"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>