<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InternalActivity" >

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/buttonBuatFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buat_file" />

        <Button
            android:id="@+id/buttonUbahFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubah_file" />

        <Button
            android:id="@+id/buttonBacaFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baca_file" />

        <Button
            android:id="@+id/buttonHapusFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hapus_file" />

        <TextView
            android:id="@+id/textBaca"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:text="@string/hasil_baca"
            android:textAlignment="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>