<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="254dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center_horizontal"
            android:text="@string/latihan_persistance"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnInternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internal_storage"/>

        <Button
            android:id="@+id/btnExternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/external_storage"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>